Fix window title vertical alignment

--- a/sass/_window.scss
+++ b/sass/_window.scss
@@ -74,7 +74,7 @@
 .window-title {
 	font-size: .9rem;
 	font-weight: 600;
-	
+	line-height: 1.2;
 }
 
 [class*=window-control]{
